2004-11-19  Paul Brook  <paul@codesourcery.com>

	PR target/17735
	* varasm.c (default_assemble_integer): Allow pointer-sized values.
	Expand comment.

2004-11-19  Nick Clifton  <nickc@redhat.com>

	* config/stormy16/stormy16.c (combine_bnp): Add code to handle
	zero_extension and lshiftrt insns.
	Replace uses of XEXP(...) with either SET_DEST() or SET_SRC()
	where appropriate.
	* config/stormy16.stormy16.md (bclrx3, bsetx3): New patterns
	to handle bp and bn insn patterns with a zero_extend rtx
	inside them.

2004-11-19  Ian Lance Taylor  <ian@wasabisystems.com>

	* config/arm/arm.md (generic_sched): Make const.

2004-11-19  Kazu Hirata  <kazu@cs.umass.edu>

	* emit-rtl.c (classify_insn): Make it static.
	* rtl.h: Remove the corresponding prototype.

	* integrate.c (has_func_hard_reg_initial_val,
	get_func_hard_reg_initial_val): Make them static.
	* integrate.h: Remove the corresponding prototypes.

2004-11-19  Ben Elliston  <bje@au.ibm.com>

	* dwarf2asm.h (dw2_asm_output_pcel): Stub out with #if 0.
	(dw2_asm_output_delta_sleb128): Likewise.
	* dwarf2asm.c (dw2_asm_output_pcrel): Likewise.
	(dw2_asm_output_delta_sleb128): Likewise.

2004-11-19  Adam Nemet  <anemet@lnxw.com>

	* tree-ssa-alias.c: Fix comment.

2004-11-19  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-outof-ssa.c: Fix a comment typo.

2004-11-19  Ben Elliston  <bje@au.ibm.com>

	* predict.h (predict_insn): Remove extern declaration.
	* predict.c (predict_insn): Make static.

2004-11-19  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.c (function_arg): Don't return BLKmode regs.

2004-11-18  Nicolas Pitre <nico@cam.org>

	* config/arm/arm.c (const_double_needs_minipool): New function to
	determine if a CONST_DOUBLE should be pushed to the minipool.
	(note_invalid_constants): Use it.

2004-11-18  Paul Brook  <paul@codesourcery.com>

	* config/arm/arm.c (target_float_switch): New variable..
	(arm_override_options): Use TARGET_DEFAULT_FLOAT_ABI and
	target_float_switch.